<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="CM_Motor_CS" Id="{0fafe257-89d4-4eea-80ec-6b12c3f31edd}">
    <Declaration><![CDATA[TYPE CM_Motor_CS :
STRUCT
	Start		: BOOL;
	Stop		: BOOL;
	Reset		: BOOL;
	Abort		: BOOL;
	Clear		: BOOL;
	UnSuspend	: BOOL;
	Suspend		: BOOL;
	UnHold		: BOOL;
	Hold		: BOOL;
	Richting_L	: BOOL;
	Richting_R	: BOOL;
	Toerental	: INT;
	Auto		: BOOL;
	Manueel		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>